# rusty-catan-io

./: Cargo.toml  readme.md  todo.md
catan-agents/: Cargo.toml
catan-agents/data/ascii/: ascii-art.txt  field.txt  field2.txt  field_axial.txt  field_axial_fixed.txt
catan-agents/docs/: greedy-agent.md  random-agent.md
catan-agents/src/: action.rs  agent.rs  async_agent.rs  cli_agent.rs  greedy.rs  greedy_agent.rs  lazy.rs  lazy_agent.rs  legal.rs  lib.rs  random.rs  remote_agent.rs
catan-agents/src/cli_agent/: agent.rs  ascii.rs  mod.rs
catan-agents/src/cli_agent/ascii/: buffer.rs  cursor.rs  field_render.rs  mod.rs
catan-agents/src/cli_agent/ascii/data/ascii/: field.txt
catan-agents/src/cli_agent/ui/: buffer.rs  field_render.rs  mod.rs
catan-agents/src/cli_agent/ui/data/ascii/: field_axial_fixed.txt  field_spiral.txt  hexagon.txt
catan-agents/src/remote_agent/: client.rs  model.rs  protocol.rs
catan-core/: Cargo.toml  readme.md
catan-core/data/: default-hex-arrangement.json
catan-core/src/: hex_spiral_to_canonical.rs  lib.rs
catan-core/src/algorithm/: mod.rs
catan-core/src/common/: fixed_set.rs
catan-core/src/gameplay/: mod.rs
catan-core/src/gameplay/agent/: action.rs  agent.rs  mod.rs
catan-core/src/gameplay/field/: mod.rs  primitives.rs  ser.rs  state.rs
catan-core/src/gameplay/game/: controller.rs  event.rs  index.rs  init.rs  legal.rs  mod.rs  query.rs  state.rs  view.rs
catan-core/src/gameplay/primitives/: bank.rs  build.rs  dev_card.rs  mod.rs  player.rs  resource.rs  trade.rs  turn.rs
catan-core/src/gameplay/strategy/: async_strategy.rs  cli_strategy.rs  lazy_ass_strategy.rs  mod.rs
catan-core/src/math/: dice.rs
catan-core/src/topology/: collision.rs  graph.rs  hex.rs  intersection.rs  mod.rs  path.rs
catan-render/: Cargo.toml
catan-render/src/: canvas.rs  cursor.rs  field.rs  lib.rs  model.rs  style.rs
catan-runtime/: Cargo.toml  readme.md
catan-runtime/data/configurations/: cli_single.json  greedy_brawl.json  lazy_vs_greedy.json  observer_debug.json
catan-runtime/src/: ascii_display.rs  cli_child.rs  config.rs  display.rs  host.rs  logging.rs  main.rs
catan-runtime/src/cli_child/: input.rs  labels.rs  logging.rs  panels.rs  render.rs  selectors.rs  session.rs  snapshot.rs  tui.rs
catan-server/: Cargo.toml
catan-server/src/: game.rs  main.rs  protocol.rs  session.rs  ws.rs
catan-train/: Cargo.toml
catan-web/: Cargo.toml
docs/: mvp-progress.md
src/: common.rs  field.rs  hex.rs  hex_coord.rs  lib.rs  main.rs  player.rs  resource.rs  topology.rs
(+56 files in other folders)
