[package]
name = "catan-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
catan-core = { path = "../catan-core" }
catan-render = { path = "../catan-render" }
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
termcolor = "1.4.1"
