[package]
name = "catan-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
genawaiter = "0.99.1"
itertools = "0.14.0"
log = "0.4.29"
num = "0.4.3"
rand = "0.10.1"
tinyvec = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
serde_with = "3.18.0"


[[bin]]
name = "hex_spiral_to_canonical"
path = "src/hex_spiral_to_canonical.rs"