[package]
name = "catan-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
catan-core = { path = "../catan-core" }
catan-agents = { path = "../catan-agents" }
catan-render = { path = "../catan-render" }
crossterm = "0.29"
log = "0.4.29"
env_logger = "0.11.10"
ratatui = "0.29"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
