[package]
name = "catan-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws", "tokio", "http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

catan-core = { path = "../catan-core" }
catan-agents = { path = "../catan-agents" }
